--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -17,5 +17,14 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Poppins, Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  @apply container mx-auto;
+}
+
+main {
+  flex: 1;
+  @apply my-8
 }
