--- a/my-app/app/globals.css
+++ b/my-app/app/globals.css
@@ -21,7 +21,7 @@ body {
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  @apply container mx-auto;
+  @apply container max-w-2xl mx-auto;
 }
 
 main {
